--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,10 @@
         placeholder="Search images..."
       />
       <button type="submit" class="btn">Search</button>
-      <span class="loader"></span>
-      <div id="results"></div>
-  
     </form>
     <div class="gallery"></div>
-    
+    <button id="load-more" style="display: none">Load more</button>
+    <div class="loader-container" style="display: none"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
