--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,6 +20,36 @@
     <div class="gallery"></div>
     <button id="load-more" style="display: none">Load more</button>
     <div class="loader-container" style="display: none"></div>
+    <script type="module" src="./main.js"></script>
+  </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <form id="search-form" class="form">
+      <input
+        type="text"
+        name="delay"
+        class="form-text"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="btn">Search</button>
+      <span class="loader"></span>
+      <div id="results"></div>
+  
+    </form>
+    <div class="gallery"></div>
+    <button id="load-more" style="display: none;">Load more</button>
+    <div class="loader-container" style="display: none;"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
