--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         placeholder="Search images..."
       />
       <button type="submit" class="btn">Search</button>
-      <span class="loader"></span>
+      <div class="loader" style="display: none;"></div>
       <div id="results"></div>
   
     </form>
